--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "Sistema",
-  "description": "",
+  "name": "LAORTOGRAFIA",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
+  "bin": {
+    "LAORTOGRAFIA": "controller.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.6.5"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon node intex.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jeancarlos006/Sistema.git"
+    "url": "git+https://github.com/Luisosorio98/LAORTOGRAFIA.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jeancarlos006/Sistema/issues"
+    "url": "https://github.com/Luisosorio98/LAORTOGRAFIA/issues"
   },
-  "homepage": "https://github.com/jeancarlos006/Sistema#readme",
-  "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.6.4",
-    "nodemon": "^1.19.1"
-  }
+  "homepage": "https://github.com/Luisosorio98/LAORTOGRAFIA#readme"
 }
